# LLm-Evaluation-Analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval-gate.yml
app/: __init__.py  main.py
app/adapters/: anthropic_adapter.py  base.py  cohere_adapter.py  google_adapter.py  mock_adapter.py  openai_adapter.py  openrouter_adapter.py
app/api/: routes.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  evaluation.py
app/services/: __init__.py  alerts.py  analytics.py  benchmark.py  db_store.py  evaluator.py  gate.py  model_registry.py  run_store.py  task_recommender.py
app/static/: dashboard.html  index.html
config/: models.yaml  tasks.yaml
datasets/: baseline_v1.jsonl
datasets/benchmarks/: coding_sample.jsonl  mmlu_sample.jsonl  reasoning_sample.jsonl  truthfulqa_sample.jsonl
docs/: SENTINELAI_REPORT.md  architecture.md  powerbi.md  project_report.md
scripts/: ci_eval_gate.py  export_artifacts_csv.py
sql/: analytics_schema.sql
tests/: __init__.py  test_api.py
