[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-monitoring-platform"
version = "0.1.0"
description = "Production-oriented LLM evaluation and monitoring platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.39.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
